[gd_scene load_steps=5 format=3 uid="uid://j2uhl3gddp50"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_hodlr"]
[ext_resource type="Texture2D" uid="uid://bebrw3ytmobb4" path="res://assets/sprites/menu_background.png" id="1_t1liu"]
[ext_resource type="PackedScene" uid="uid://de5hpfhcp1cge" path="res://scene/main_menu_button.tscn" id="2_y53q0"]
[ext_resource type="Texture2D" uid="uid://be715ksg5yv84" path="res://assets/sprites/ssss.png" id="4_ikpdv"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_hodlr")

[node name="MenuBackground" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_t1liu")

[node name="PlayButton" parent="." instance=ExtResource("2_y53q0")]
position = Vector2(670, 490)
label_text = "PLAY"

[node name="OptionsButton" parent="." instance=ExtResource("2_y53q0")]
position = Vector2(670, 640)
label_text = "OPTIONS"

[node name="ExitButton" parent="." instance=ExtResource("2_y53q0")]
position = Vector2(670, 790)
label_text = "EXIT"

[node name="Ssss" type="Sprite2D" parent="."]
position = Vector2(955, 203)
scale = Vector2(1.15556, 1.15556)
texture = ExtResource("4_ikpdv")
